<resources>
    <string name="app_name">PCalc</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="result">%1$d</string>

    <!-- button group -->
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <!-- ops -->
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_times">*</string>
    <string name="button_div">/</string>
    <string name="button_pow">^</string>

    <!-- bitwise ops -->
    <string name="button_and">\u0020and\u0020</string>
    <string name="button_or">\u0020or\u0020</string>
    <string name="button_not">not\u0020</string>
    <string name="button_xor">\u0020xor\u0020</string>
    <string name="button_mod">%</string>
    <string name="button_shl">&lt;&lt;</string>
    <string name="button_shr">&gt;&gt;</string>

    <!-- modes -->
    <string name="button_mode_int">int</string>
    <string name="button_mode_real">real</string>

    <!-- misc -->
    <string name="button_clear">C</string>
    <string name="button_delete">D</string>
    <string name="button_pleft">(</string>
    <string name="button_pright">)</string>
    <string name="button_dec">.</string>
</resources>
